--- a/FRONTEND/EventMaker-App/src/app/components/home/home.component.html
+++ b/FRONTEND/EventMaker-App/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
           <div class="carousel-container" >
             <div class="carousel-content">
               <h2 class="animate__animated animate__fadeInDown"> Bem-vindo!</h2>
-              <p class="animate__animated animate__fadeInUp">Seja bem-vindo ao meu projeto de Eventos <img src="../../../assets/charmander_shiny.gif" style="width: 30px;height: 30px;"></p>
+              <p class="animate__animated animate__fadeInUp">Seja bem-vindo ao meu projeto de Eventos <br> <br> (passse o mouse em baixo para acessar os meus perfis) <img src="../../../assets/charmander_shiny.gif" style="width: 30px;height: 30px;"></p>
               <a  class="btn-get-started" href="https://www.linkedin.com/in/alyson-pinho-293985209/" target="_blank">LinkedIn</a>
               <a  class="btn-get-started" href="https://github.com/alyson-rdev" target="_blank">GitHub</a>
             </div>
