--- a/FRONTEND/EventMaker-App/src/app/shared/nav/nav.component.html
+++ b/FRONTEND/EventMaker-App/src/app/shared/nav/nav.component.html
@@ -10,7 +10,10 @@
           <a class="nav-link" aria-current="page" routerLink="home">Home</a>
         </li>
         <li class="nav-item" routerLinkActive="active" >
-          <a class="nav-link" aria-current="page" routerLink="eventos">Eventos</a>
+          <a class="nav-link" aria-current="page" routerLink="eventos/lista">Eventos</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active" >
+          <a class="nav-link" aria-current="page" routerLink="palestrantes">Palestrantes</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" routerLink="contatos">Contatos</a>
@@ -19,17 +22,17 @@
 
 
       <ul class="navbar-nav" >
-        <li class="nav-item dropdown"  style="left: 950px"  dropdown container="body">
+        <li class="nav-item dropdown"  style="left: 890px"  dropdown container="body">
           <a dropdownToggle class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
             Alyson
           </a>
           <div *dropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" routerLink="perfil">
+            <a class="dropdown-item" routerLink="user/perfil">
               Perfil
             </a>
             <div role="separator" class="divider"></div>
-            <a class="dropdown-item" href="#">
+            <a class="dropdown-item" routerLink="user/login">
               Sair
             </a>
           </div>
